# pycatch

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
pycatch/: __init__.py
python/pycatch22/: __init__.py
src/: catch22.rs  lib.rs  statistics.rs
